[tool.poetry]
name = "hodgepodge"
version = "0.1.2"
description = ""
authors = ["Tyler Fisher <tylerfisher@tylerfisher.ca>"]
readme = "README.md"

[tool.poetry.scripts]
hodgepodge = "hodgepodge.cli:cli"

[tool.poetry.dependencies]
python = "^3.8"
arrow = "1.0.3;"
stix2 = "~=3.0.0"
stix2-patterns = "~=1.3.2"
taxii2-client = "~=2.3.0"
setuptools = "~=45.2.0"
click = "~=7.0"
python-dateutil = "~=2.7.3"
DAWG = "~=0.8.0"
dacite = "~=1.6.0"
requests = "~=2.22.0"
coverage = "^5.5"
antlr4-python3-runtime = "4.8;"
python_version = "^0.0.2"
certifi = "2021.5.30;"
and = "^0.1.1"
chardet = "3.0.4;"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = {extras = ["toml"], version = "^5.5"}
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
mypy = "^0.910"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
