[tool.poetry]
name = "hodgepodge"
version = "0.1.3"
description = ""
authors = ["Tyler Fisher <tylerfisher@tylerfisher.ca>"]
readme = "README.md"

[tool.poetry.scripts]
hodgepodge = "hodgepodge.cli:cli"

[tool.poetry.dependencies]
python = ">=3.5.0,<4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = {extras = ["toml"], version = "^5.5"}

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
