[tool.poetry]
name = "hodgepodge"
version = "3.0.4"
description = ""
authors = ["Tyler Fisher <tylerfisher@tylerfisher.ca>"]
license = "MIT"
repository = 'https://github.com/whitfieldsdad/hodgepodge'
readme = "README.md"

[tool.poetry.scripts]
hodgepodge = "hodgepodge.cli:cli"

[tool.poetry.dependencies]
python = ">=3.6.0,<4"
arrow = "~=1.0.3"
setuptools = "~=45.2.0"
click = "~=7.0"
requests = "~=2.22.0"
python-dateutil = "~=2.7.3"
DAWG = "~=0.8.0"
urllib3 = "~=1.25.8"
stix2 = "^3.0.1"
taxii2-client = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^5.5"}

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
